network-edge/default_network_policy.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2019 Intel Corporation

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: block-all-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
