network-edge/nfd_network_policy.yml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2019-2020 Intel Corporation

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nfd-network-policy
  namespace: openness
spec:
  podSelector:
    matchLabels:
      app: nfd-master
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nfd-worker
    ports:
    - protocol: TCP
      port: 8080
